--- a/People Counter/index.html
+++ b/People Counter/index.html
@@ -19,7 +19,7 @@
     Set the id to "save-btn" and call the save() function when it's clicked  -->
 
     <button class="save-btn" onclick="save()">SAVE</button>
-
+    <p>Previous entries: <span id="save-el"></span></p>
     <script src="app.js"></script>
   </body>
 </html>
