--- a/People Counter/index.html
+++ b/People Counter/index.html
@@ -11,15 +11,14 @@
     <h1>People Entered</h1>
     <h2 id="count-el">0</h2>
 
-    <!--  Create a INCREMENT button with the id="increment-btn"  -->
-
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
 
-    <!--  Create a SAVE button.
-    Set the id to "save-btn" and call the save() function when it's clicked  -->
-
     <button class="save-btn" onclick="save()">SAVE</button>
+
     <p>Previous entries: <span id="save-el"></span></p>
+
+    <button id="reset-el" onclick="resetAll()">Reset</button>
+
     <script src="app.js"></script>
   </body>
 </html>
