--- a/Blackjack Game/index.html
+++ b/Blackjack Game/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Blackjack</title>
+    <title>Blackjack Game</title>
   </head>
   <body>
+    <main>
+      <h1>Blackjack</h1>
+      <p id="message-el">Want ot play a round?</p>
+      <p id="cards-el">Cards:</p>
+      <p id="sum-el">Sum:</p>
+      <button type="button" onclick="startGame()">START GAME</button>
+      <br />
+      <button class="button" onclick="newCard()">NEW CARD</button>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
