--- a/Blackjack Game/index.html
+++ b/Blackjack Game/index.html
@@ -16,6 +16,7 @@
       <button type="button" onclick="startGame()">START GAME</button>
       <br />
       <button class="button" onclick="newCard()">NEW CARD</button>
+      <p id="player-el"></p>
     </main>
     <script src="app.js"></script>
   </body>
