--- a/lead-tracker/index.html
+++ b/lead-tracker/index.html
@@ -5,6 +5,8 @@
   <body>
     <input type="text" id="input-el" />
     <button id="input-btn">Save Input</button>
+    <button id="save-tab-btn">Save Tab</button>
+    <button id="delete-btn">Delete All</button>
     <ul id="ul-el"></ul>
     <script src="app.js"></script>
   </body>
